<resources>
    <string name="APPLICATION_NAME">aTalk</string>
    <string name="encryption_choices">Encrypt Choices</string>
    <string name="encryption_choice_unencrypted">Unencrypted</string>
    <string name="encryption_choice_omemo">OMEMO</string>
    <string name="encryption_choice_otr">OTR</string>
    <string name="service_gui_PASSWORD">Password:</string>
    <string name="system_settings">Settings&#8230;</string>
    <string name="service_gui_USERNAME">Username:</string>
    <string name="service_gui_ACCOUNT_SETTINGS">Account settings&#8230;</string>
    <string name="service_gui_ADD_CONTACT">Add contact</string>
    <string name="service_gui_CALL">Audio call</string>
    <string name="service_gui_CLOSE_ALL_CHATS">Close all active chats</string>
    <string name="service_gui_CLOSE_CHAT">Close current chat session</string>
    <string name="About_action">About</string>
    <string name="service_gui_GEO_SEND">Send GPS-Location</string>
    <string name="service_gui_CREATE_VIDEO_BRIDGE">Create a video bridge&#8230;</string>
    <string name="service_gui_ENTER_NAME_OR_NUMBER">Enter name or number</string>
    <string name="service_gui_FILE_SEND_TO">Send Attachment</string>
    <string name="service_gui_HIDE_OFFLINE_CONTACTS">Hide offline contacts</string>
    <string name="service_gui_HISTORY_ERASE_PER_CONTACT">Erase this contact history</string>
    <string name="service_gui_CHATROOM_OCCUPANT">ChatRoom occupants</string>
    <string name="service_gui_CHATROOM_HISTORY_ERASE_PER">Erase this chatRoom history</string>
    <string name="service_gui_CHATROOM_HISTORY_ERASE_ALL">Erase all chatRooms history</string>
    <string name="service_gui_CHATROOM_INFO">ChatRoom info</string>
    <string name="service_gui_CHATROOM_DESTROY">Destroy this chatRoom</string>
    <string name="service_gui_INVITE">Invite</string>
    <string name="service_gui_SIGN_OUT">Sign out</string>
    <string name="pref_key_bosh_configuration">Bosh_Configuration</string>
    <string name="service_gui_settings_BOSH_PROXY">BOSH-Proxy Configuration</string>
    <string name="service_gui_settings_BOSH_PROXY_SUMMARY">Setup connection via BOSH/Proxy for the account</string>
    <string name="plugin_provisioning_CREDENTIALS">Last stored provisioning credentials</string>
    <string name="plugin_provisioning_FORGET_PASSWORD">Forget password</string>
    <string name="plugin_provisioning_MANUAL">Manually specify a provisioning URI</string>
    <string name="plugin_provisioning_METHOD">Provisioning method</string>
    <string name="plugin_provisioning_PROVISIONING">Provisioning</string>
    <string name="plugin_provisioning_PROVISIONING_SUMMARY">Configure provisioning settings</string>
    <string name="plugin_provisioning_UUID">UUID</string>
    <string name="service_gui_settings_DNSSEC_DANE">SSL/DNSSEC/DANE Security</string>
    <string name="pref_key_zid_reset">pref.key.zid.reset</string>
    <string name="reset_ZID_summary">Reset long-lived ZRTP identifier</string>
    <string name="reset_ZID_title">Reset ZID</string>
    <string name="service_gui_PREF_SECURITY_ENCRYPTION">Enable call encryption</string>
    <string name="service_gui_PREF_SECURITY_ENC_PROTOCOLS">Encryption protocols</string>
    <string name="service_gui_PREF_SECURITY_GENERAL">General</string>
    <string name="service_gui_PREF_SECURITY_RTP_SAVP">RTP/SAVP indication</string>
    <string name="service_gui_PREF_SECURITY_RTP_SAVP_TITLE">RTP/SAVP indication method</string>
    <string name="service_gui_PREF_SECURITY_SDES">SDes options</string>
    <string name="service_gui_PREF_SECURITY_SDES_DLG_TITLE">Select desired cipher suites</string>
    <string name="service_gui_PREF_SECURITY_SDES_TITLE">SDES cipher suites</string>
    <string name="service_gui_PREF_SECURITY_ZRTP">ZRTP options</string>
    <string name="service_gui_PREF_SECURITY_ZRTP_SIGNALING">ZRTP signaling</string>
    <string name="service_gui_PREF_AUDIO_ENCODING">Audio encoding</string>
    <string name="service_gui_PREF_AUDIO_ENC_SUMMARY">Override global defined audio formats for this account</string>
    <string name="service_gui_PREF_ENCRYPTION">Call Encryption settings</string>
    <string name="service_gui_PREF_VIDEO_ENCODING">Video encoding</string>
    <string name="service_gui_PREF_VIDEO_ENC_SUMMARY">Override global defined video formats for this account</string>
    <string name="service_gui_JBR_ADVANCED">Advanced</string>
    <string name="service_gui_JBR_AUTO_STUN_DICOVERY">Auto discover STUN/TURN servers</string>
    <string name="service_gui_JBR_CONN_SUMMARY">Set Connection details&#8230;</string>
    <string name="service_gui_JBR_CONNECTION">Connection Settings</string>
    <string name="service_gui_JBR_ICE">ICE</string>
    <string name="service_gui_JBR_ICE_GENERAL">General</string>
    <string name="service_gui_JBR_ICE_SUMMARY">Configure ICE options&#8230;</string>
    <string name="service_gui_JBR_JINGLE_AUTO">Auto discover Jingle Nodes relays</string>
    <string name="service_gui_JBR_JINGLE_LIST">Additional Jingle Nodes&#8230;</string>
    <string name="service_gui_JBR_JINGLE_LIST_SUMMARY">User defined additional Jingle Nodes for use</string>
    <string name="service_gui_JBR_JINGLE_NODES">Jingle Nodes</string>
    <string name="service_gui_JBR_JINGLE_SUMMARY">Use jingle nodes</string>
    <string name="service_gui_JBR_PASSWORD">Enter Password</string>
    <string name="service_gui_JBR_STORE_PASSWORD">Remember password</string>
    <string name="service_gui_JBR_STORE_PASSWORD_SUMMARY">Save password for auto login on application start up</string>
    <string name="service_gui_JBR_STUN_LIST">Additional STUN/TURN servers&#8230;</string>
    <string name="service_gui_JBR_STUN_LIST_SUMMARY">User defined additional STUN/TURN servers for use</string>
    <string name="service_gui_JBR_TELEPHONY">Telephony (experimental)</string>
    <string name="service_gui_JBR_TELEPHONY_SUMMARY">Configure telephony options&#8230;</string>
    <string name="service_gui_JBR_USE_ICE">Use ICE</string>
    <string name="service_gui_JBR_USE_UPNP">Use UPnP</string>
    <string name="service_gui_JBR_USER">USER ID</string>
    <string name="service_gui_JBR_USER_CATEGORY">User name and password</string>
    <string name="pref_cat_account">pref_cat_account</string>
    <string name="pref_cat_audio_encoding">pref_cat_enc_audio</string>
    <string name="pref_cat_video_encoding">pref_cat_enc_video</string>
    <string name="pref_cat_jbr_advanced">pref.cat.jbr.advanced</string>
    <string name="pref_cat_jbr_ice_general">pref.cat.jbr.ice.general</string>
    <string name="pref_cat_jbr_jnodes">pref.cat.jbr.jinglenodes</string>
    <string name="pref_screen_jbr_conn">pref.screen.jbr.connection</string>
    <string name="pref_screen_jbr_ice">pref.screen.jbr.ice</string>
    <string name="pref_screen_jbr_tele">pref.screen.jbr.telephony</string>
    <string name="pref_key_password">pref_key_password</string>
    <string name="pref_key_store_password">pref_key_store_password</string>
    <string name="pref_key_user_id">pref_key_user_id</string>
    <string name="pref_key_auto_discover_stun">pref_key_auto_discover_stun</string>
    <string name="pref_key_auto_relay_dicovery">pref_key_auto_relay_discovery</string>
    <string name="pref_key_ice_enabled">pref_key_ice_enabled</string>
    <string name="pref_key_jingle_node_list">pref_key_jingle_node_list</string>
    <string name="pref_key_stun_turn_servers">pref_key_stun_turn_servers</string>
    <string name="pref_key_upnp_enabled">pref_key_upnp_enabled</string>
    <string name="pref_key_use_jingle_nodes">pref_key_use_jingle_nodes</string>
    <string name="pref_key_enable_encryption">pref_key_enable_encryption</string>
    <string name="pref_key_enc_cipher_suites">pref_key_ecn_cipher_suites</string>
    <string name="pref_key_enc_protocols_dialog">pref_key_enc_protos_dialog</string>
    <string name="pref_key_enc_savp_option">pref_key_enc_savp_option</string>
    <string name="pref_key_enc_sipzrtp_attr">pref_key_enc_sipzrtp_attr</string>
    <string name="pref_cat_security_general">pref.cat.security.general</string>
    <string name="pref_cat_security_sdes">pref.cat.security.sdes</string>
    <string name="pref_cat_security_zrtp">pref.cat.security.zrtp</string>
    <string name="service_gui_TTS_ENABLE">Enable Text &#x27A1; Speech</string>
    <string name="pref_cat_settings_audio">pref.cat.settings.audio</string>
    <string name="service_gui_settings_AUDIO">Audio</string>
    <string name="pref_key_audio_echo_cancel">pref.key.audio.echo_cancel</string>
    <string name="service_gui_settings_ECHO_CANCEL">Echo cancellation</string>
    <string name="service_gui_settings_ECHO_CANCEL_OFF">Disabled</string>
    <string name="service_gui_settings_ECHO_CANCEL_ON">Enabled</string>
    <string name="pref_key_audio_agc">pref.key.audio.agc</string>
    <string name="service_gui_settings_AGC">Automatic gain control</string>
    <string name="service_gui_settings_AGC_OFF">Disabled</string>
    <string name="service_gui_settings_AGC_ON">Enabled</string>
    <string name="pref_key_audio_denoise">pref.key.audio.denoise</string>
    <string name="service_gui_settings_DENOISE">Noise suppression</string>
    <string name="service_gui_settings_DENOISE_OFF">Disabled</string>
    <string name="service_gui_settings_DENOISE_ON">Enabled</string>
    <string name="pref_cat_settings_video">pref.cat.settings.video</string>
    <string name="service_gui_settings_VIDEO">Video</string>
    <string name="pref_key_video_hw_decode">neomedia.android.hw_decode</string>
    <string name="pref_key_video_hw_encode">neomedia.android.hw_encode</string>
    <string name="pref_key_video_surface_decode">neomedia.android.surface_decode</string>
    <string name="pref_key_video_surface_encode">neomedia.android.surface_encode</string>
    <string name="service_gui_settings_DIRECT_SURFACE_DECODE">Use direct surface decoding (restart required)</string>
    <string name="service_gui_settings_DIRECT_SURFACE_ENCODE">Use direct surface encoding (restart required)</string>
    <string name="service_gui_settings_HW_DECODE">Use hardware decoding (restart required)</string>
    <string name="service_gui_settings_HW_ENCODE">Use hardware encoding</string>
    <string name="service_gui_settings_MEDIA_CODEC_LIST">MediaCodecs</string>
    <string name="service_gui_settings_MEDIA_CODEC_LIST_SUMMARY">List of built-in media encoders/decoders</string>
    <string name="pref_key_video_bitrate">pref.key.video.bitrate</string>
    <string name="pref_key_video_limit_fps">pref.key.video.limit_fps</string>
    <string name="pref_key_video_max_bandwidth">pref.key.video.max_bandwidth</string>
    <string name="pref_key_video_target_fps">pref.key.video.frame_rate</string>
    <string name="service_gui_settings_LIMIT_FPS_OFF">Unlimited</string>
    <string name="service_gui_settings_LIMIT_FPS_ON">Adjusted frame rate</string>
    <string name="service_gui_settings_VIDEO_BITRATE">Video bitrate (kilobits/s)</string>
    <string name="service_gui_settings_VIDEO_FRAME_RATE">Video frame rate</string>
    <string name="service_gui_settings_VIDEO_FPS_DESC">Values accepted between 5 and 30 fps</string>
    <string name="service_gui_settings_VIDEO_MAX_BANDWIDTH">RTP pacing threshold (kBytes/s)</string>
    <string name="service_gui_settings_VIDEO_TARGET_FPS">Target frame rate (per sec.)</string>
    <string name="service_gui_settings_EXPERT">Expert settings</string>
    <string name="service_gui_settings_EXPERT_SUMMARY">Please be careful with these</string>
    <string name="service_gui_settings_OTHER">Other</string>
    <string name="service_gui_settings_OPUS">Opus</string>
    <string name="service_gui_settings_OPUS_SUMMARY">Configure Opus encoder settings</string>
    <string name="service_gui_settings_SILK">Silk</string>
    <string name="service_gui_settings_SILK_SUMMARY">Configure Silk encoder settings</string>
    <string name="pref_key_dnssec_mode">dns.DNSSEC_MODE</string>
</resources>