<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_cat_security_general"
        android:title="@string/service_gui_PREF_SECURITY_GENERAL">
        <CheckBoxPreference
            android:key="@string/pref_key_enable_encryption"
            android:title="@string/service_gui_PREF_SECURITY_ENCRYPTION" />
        <Preference
            android:dependency="@string/pref_key_enable_encryption"
            android:key="@string/pref_key_enc_protocols_dialog"
            android:persistent="false"
            android:title="@string/service_gui_PREF_SECURITY_ENC_PROTOCOLS" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_cat_security_zrtp"
        android:title="@string/service_gui_PREF_SECURITY_ZRTP">
        <CheckBoxPreference
            android:dependency="@string/pref_key_enable_encryption"
            android:key="@string/pref_key_enc_sipzrtp_attr"
            android:title="@string/service_gui_PREF_SECURITY_ZRTP_SIGNALING" />
        <!-- Reset ZID -->
        <PreferenceScreen
            android:key="@string/pref_key_zid_reset"
            android:summary="@string/reset_ZID_summary"
            android:title="@string/reset_ZID_title">
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_cat_security_sdes"
        android:title="@string/service_gui_PREF_SECURITY_SDES">
        <MultiSelectListPreference
            android:dependency="@string/pref_key_enable_encryption"
            android:dialogTitle="@string/service_gui_PREF_SECURITY_SDES_DLG_TITLE"
            android:key="@string/pref_key_enc_cipher_suites"
            android:title="@string/service_gui_PREF_SECURITY_SDES_TITLE" />
        <ListPreference
            android:dependency="@string/pref_key_enable_encryption"
            android:dialogTitle="@string/service_gui_PREF_SECURITY_RTP_SAVP_TITLE"
            android:entries="@array/pref_savp_option_desc"
            android:entryValues="@array/pref_savp_option_desc"
            android:key="@string/pref_key_enc_savp_option"
            android:title="@string/service_gui_PREF_SECURITY_RTP_SAVP" />
    </PreferenceCategory>
</PreferenceScreen>